--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 
     <div class="navigation">
-        <img class="logo"  src="../logo bgmi.jpg" alt="logo">
+        <img class="logo"  src="logo bgmi.jpg" alt="logo">
         <ul class="nav-contentleft">
             <li class="l1">HOME</li>
             <li>NEWS</li>
@@ -37,18 +37,18 @@
     <!-- ------------------------div2--------------------------------->
     
     <div class="mainpage"> 
-      <img class="mainbg" src="../main bg perfect.jpeg" alt="bgmi">
+      <img class="mainbg" src="main bg perfect.jpeg" alt="bgmi">
       <div class="mainsub">
       <h3> INDIA KA 
         BATTLEGROUNDS </h3>
-       <img class="applelogo" src="../apple store.jpeg" alt="download from apple store">
-       <img class="playstorelogo" src="../play store.png" alt="download from play store">
+       <img class="applelogo" src="apple store.jpeg" alt="download from apple store">
+       <img class="playstorelogo" src="play store.png" alt="download from play store">
       </div>
-      <img class="kraftonlogo" src="../BATTLEGROUNDS MOBILE INDIA KRAFTON.png" alt="kraftonlogo">
+      <img class="kraftonlogo" src="BATTLEGROUNDS MOBILE INDIA KRAFTON.png" alt="kraftonlogo">
     </div>
 
     <div class="mainpage2">
-        <img class="vdobg" src="../videot_bg.jpg" alt="assets">
+        <img class="vdobg" src="videot_bg.jpg" alt="assets">
         <div class="subdiv">
             <iframe width="1200" height="700" src="https://www.youtube.com/embed/5NfkxxxndRc" title="India Ki Heartbeat | Episode 1" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
         </div>
@@ -59,12 +59,12 @@
 <!-- ------------------------div3--------------------------------->
 
 <div class="mainpage3">
-<img class="newsbg" src="../news_bg.jpg" alt="white  bg ">
+<img class="newsbg" src="news_bg.jpg" alt="white  bg ">
 
   <div class="subdiv3">
-    <a href="https://www.battlegroundsmobileindia.com/news_view/828"><img src="../220404_knownissue_web_in.jpg" alt="issue"></a>
-    <a href="https://www.battlegroundsmobileindia.com/news_view/827"><img src="../image.png" alt="update"></a>
-    <a href="https://www.battlegroundsmobileindia.com/news_view/826"><img src="../02_Banner_Notice.jpg" alt="news"></a>
+    <a href="https://www.battlegroundsmobileindia.com/news_view/828"><img src="220404_knownissue_web_in.jpg" alt="issue"></a>
+    <a href="https://www.battlegroundsmobileindia.com/news_view/827"><img src="image.png" alt="update"></a>
+    <a href="https://www.battlegroundsmobileindia.com/news_view/826"><img src="02_Banner_Notice.jpg" alt="news"></a>
   </div>
 
     <div class="issue">
@@ -92,13 +92,13 @@
 <!-- ------------------------div4--------------------------------->
 
 <div class="mainpage4">
-  <img class="add" src="../add_bg.jpg" alt="black  background">
+  <img class="add" src="add_bg.jpg" alt="black  background">
      <div class="subdiv4">
-      <img src="../hq720 (4).jpg" alt="youtube1">
-      <img src="../hq720.jpg" alt="youtube2">
-      <img src="../hq720 (1).jpg" alt="youtube3">
-      <img src="../hq720 (2).jpg" alt="youtube4">
-      <img src="../hq720 (4).jpg" alt="youtube5">
+      <img src="hq720 (4).jpg" alt="youtube1">
+      <img src="hq720.jpg" alt="youtube2">
+      <img src="hq720 (1).jpg" alt="youtube3">
+      <img src="hq720 (2).jpg" alt="youtube4">
+      <img src="hq720 (4).jpg" alt="youtube5">
     </div>
 
     <div class="cyber">
@@ -128,15 +128,15 @@
 <!-- ------------------------div5--------------------------------->
 
 <div class="mainpage5">
-   <img class="pubgmap"  src="../pubgmap.jpg" alt="pubgmap">
-   <img class="icon" src="../app.png" alt="pubg icon">
+   <img class="pubgmap"  src="pubgmap.jpg" alt="pubgmap">
+   <img class="icon" src="app.png" alt="pubg icon">
 </div>
 <div class="subdiv5">
   <p> INDIA KA BATTLEGROUND IS HERE <br> DOWNLOAD NOW !<p>
-   <img class="applelogo" src="../apple store.jpeg" alt="download from apple store">
-   <img class="playstorelogo" src="../play store.png" alt="download from play store">
+   <img class="applelogo" src="apple store.jpeg" alt="download from apple store">
+   <img class="playstorelogo" src="play store.png" alt="download from play store">
   </div>
-<img class="pubgkrafton" src="../krafton logo.jpg">
+<img class="pubgkrafton" src="krafton logo.jpg">
   <p class="copyright"> © 2023 KRAFTON, Inc. All rights reserved.</p>
   <div class="footer">
     <p  class="p1">Privacy Policy  | </p>
